feat: rework l0 and build